--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title failed">Failed methods</span>
@@ -103,10 +103,24 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.api.tests.GetAccountUserTest" class="method navigator-link" hash-for-method="getAccountUserTest">getAccountUserTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.api.tests.LoginApiExcelDataDrivenTest" class="method navigator-link" hash-for-method="loginApiTest(Login [username=Rupesh12, password=qwrere])">loginApiTest(Login [username=Rupesh12, password=qwrere])</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
+                  </li>
+                  <li>
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.api.tests.LoginApiExcelDataDrivenTest" class="method navigator-link" hash-for-method="loginApiTest(Login [username=Rupesh, password=Rup0101**])">loginApiTest(Login [username=Rupesh, password=Rup0101**])</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -121,18 +135,17 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.api.tests.GetAccountUserTest</span>
+              <span class="class-name">com.api.tests.LoginApiExcelDataDrivenTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAccountUserTest">
-                  </a> <!-- getAccountUserTest -->
-                  <span class="method-name">getAccountUserTest</span>
+                  <a name="loginApiTest(Login [username=Rupesh12, password=qwrere])">
+                  </a> <!-- loginApiTest(Login [username=Rupesh12, password=qwrere]) -->
+                  <span class="method-name">loginApiTest</span>
+                  <span class="parameters">(Login [username=Rupesh12, password=qwrere])</span>
                   <div class="stack-trace">java.lang.AssertionError: 1 expectation failed.
-JSON path balance doesn&apos;t match.
-Expected: every item is a value greater than &lt;0.0F&gt;
-  Actual: &lt;[19.0, 0.0, 0.0]&gt;
+Expected status code &lt;200&gt; but was &lt;401&gt;.
 
 	at java.base/jdk.internal.reflect.DirectConstructorHandleAccessor.newInstance(DirectConstructorHandleAccessor.java:62)
 	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)
@@ -144,19 +157,9 @@ Expected: every item is a value greater than &lt;0.0F&gt;
 	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:277)
 	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure.validate(ResponseSpecificationImpl.groovy:512)
 	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure$validate$1.call(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.validateResponseIfRequired(ResponseSpecificationImpl.groovy:696)
-	at io.restassured.internal.ResponseSpecificationImpl.this$2$validateResponseIfRequired(ResponseSpecificationImpl.groovy)
-	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
-	at org.codehaus.groovy.runtime.callsite.PlainObjectMetaMethodSite.doInvoke(PlainObjectMetaMethodSite.java:43)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite$PogoCachedMethodSiteNoUnwrapNoCoerce.invoke(PogoMetaMethodSite.java:198)
-	at org.codehaus.groovy.runtime.callsite.PogoMetaMethodSite.callCurrent(PogoMetaMethodSite.java:62)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callCurrent(AbstractCallSite.java:185)
-	at io.restassured.internal.ResponseSpecificationImpl.body(ResponseSpecificationImpl.groovy:270)
-	at io.restassured.specification.ResponseSpecification$body$2.callCurrent(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.body(ResponseSpecificationImpl.groovy:117)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.body(ValidatableResponseOptionsImpl.java:244)
-	at com.api.tests.GetAccountUserTest.getAccountUserTest(GetAccountUserTest.java:19)
+	at io.restassured.internal.ResponseSpecificationImpl.validate(ResponseSpecificationImpl.groovy:101)
+	at io.restassured.internal.ValidatableResponseOptionsImpl.spec(ValidatableResponseOptionsImpl.java:288)
+	at com.api.tests.LoginApiExcelDataDrivenTest.loginApiTest(LoginApiExcelDataDrivenTest.java:20)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
 	at org.testng.internal.invokers.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:141)
@@ -186,15 +189,33 @@ Expected: every item is a value greater than &lt;0.0F&gt;
 
 </div> <!-- stack-trace -->
                   <em>
-(to verify account details are coming correct in response for a valid user)                  </em>
+(to verify the login api)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-failed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.api.tests.LoginApiExcelDataDrivenTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="loginApiTest(Login [username=Rupesh, password=Rup0101**])">
+                  </a> <!-- loginApiTest(Login [username=Rupesh, password=Rup0101**]) -->
+                  <span class="method-name">loginApiTest</span>
+                  <span class="parameters">(Login [username=Rupesh, password=Rup0101**])</span>
+                  <em>
+(to verify the login api)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/g0/77m9h_dj08z3dgdd8gkl4ppw0000gn/T/testng-eclipse-234877588/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/g0/77m9h_dj08z3dgdd8gkl4ppw0000gn/T/testng-eclipse-1249954862/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -203,11 +224,11 @@ Expected: every item is a value greater than &lt;0.0F&gt;
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.api.tests.GetAccountUserTest&quot;&gt;
+      &lt;class name=&quot;com.api.tests.LoginApiExcelDataDrivenTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;getAccountUserTest&quot;/&gt;
+          &lt;include name=&quot;loginApiTest&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.api.tests.GetAccountUserTest --&gt;
+      &lt;/class&gt; &lt;!-- com.api.tests.LoginApiExcelDataDrivenTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -235,7 +256,7 @@ Expected: every item is a value greater than &lt;0.0F&gt;
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">getAccountUserTest</span>
+                <span class="method-in-group-name">loginApiTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -243,7 +264,7 @@ Expected: every item is a value greater than &lt;0.0F&gt;
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">getAccountUserTest</span>
+                <span class="method-in-group-name">loginApiTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -263,16 +284,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getAccountUserTest')
-data.setCell(0, 2, 'com.api.tests.GetAccountUserTest')
-data.setCell(0, 3, 826);
+data.setCell(0, 1, 'loginApiTest')
+data.setCell(0, 2, 'com.api.tests.LoginApiExcelDataDrivenTest')
+data.setCell(0, 3, 1478);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'loginApiTest')
+data.setCell(1, 2, 'com.api.tests.LoginApiExcelDataDrivenTest')
+data.setCell(1, 3, 114);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 826 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -298,12 +323,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.api.tests.GetAccountUserTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.api.tests.LoginApiExcelDataDrivenTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">loginApiTest(Login [username=Rupesh, password=Rup0101**])</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">getAccountUserTest</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-name">loginApiTest(Login [username=Rupesh12, password=qwrere])</span>
+                <span class="method-start">1480 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
